# movie_rust_backend

./: Cargo.toml  \
migrations/: 20240927171415_client_table.sql  20240927204133_new_client_constraints.sql  20240928165733_movies_table.sql  20240928220001_adding_unique_attributes.sql  20240929002518_classification_unique.sql
src/: auth_middleware.rs  main.rs
src/movie_service/: domain.rs  error.rs  mod.rs  movie_database.rs  service.rs
src/user_service/: domain.rs  err.rs  mod.rs  service.rs  token_provider.rs  user_database.rs
