[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
bcrypt = "0.15.1"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros"]}
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev.package.sqlx-macros]
opt-level = 3
